--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
             crossorigin="anonymous">
@@ -28,7 +27,7 @@
         <div class="col-md-6">
           <div class="d-flex align-items-center justify-content-center">
             <h2 class="font-bold pe-4"> Recent Scores </h2>
-            <button class="bordered-button text-center"> <i class="fas fa-sync-alt font-bold text-center"></i> </button>
+            <button class="bordered-button text-center" type="button"> <i class="fas fa-sync-alt font-bold text-center"></i> </button>
           </div>
           <ul id="list" class="mt-4 list-unstyled mx-auto w-75 p-0">
             <li class="font-bold"> Name: 100 </li>
@@ -46,7 +45,7 @@
               <input type="text" name="" class="form-control input-score bg-white" placeholder="Your score">
             </div>
             <div class="d-flex align-items-center justify-content-end mt-3">
-              <button class="bordered-button">
+              <button class="bordered-button" type="submit">
                 <i class="fas fa-paper-plane text-center font-bold"> </i>
               </button>
             </div>
